# ralph-parallel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.claude-plugin/: marketplace.json
gpu-graphics-demo/: Cargo.toml
gpu-graphics-demo/shaders/: terrain.wgsl
gpu-graphics-demo/src/: app.rs  camera.rs  main.rs  renderer.rs  terrain.rs  texture.rs  uniforms.rs  vertex.rs
gpu-metrics-operator/: index.html  package-lock.json  package.json  tsconfig.json
gpu-metrics-operator/src/: main.ts  types.ts
plugins/ralph-parallel/: README.md
ralph-parallel/.claude-plugin/: plugin.json
ralph-parallel/commands/: dispatch.md  merge.md  status.md
ralph-parallel/hooks/: hooks.json
ralph-parallel/scripts/: build-teammate-prompt.py  capture-baseline.sh  create-task-plan.py  mark-tasks-complete.py  parse-and-partition.py  test_build_teammate_prompt.py  test_create_task_plan.py  test_parse_and_partition.py  test_stop_hook.sh  test_validate_pre_merge.py  test_verify_commit_provenance.py  test_write_dispatch_state.py  validate-pre-merge.py  validate-tasks-format.py
ralph-parallel/templates/: team-prompt.md  teammate-prompt.md
scripts/: test.mjs
specs/: .current-spec
specs/api-dashboard/: .dispatch-state.json  .progress.md  .ralph-state.json  tasks.md
specs/audit-fixes-v2/: .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
specs/deep-audit-fixes/: .progress.md  design.md  requirements.md  research.md  tasks.md
specs/dispatch-guardrails/: .progress.md  design.md  requirements.md  tasks.md  (+1 more)
(+144 files in other folders)
