[package]
name = "gpu-graphics-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "28.0"
winit = "0.30"
pollster = "0.3"
glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = { version = "1.9", features = ["derive"] }
noise = "0.9"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
